@@ -2,6 +2,7 @@
 2007-xx-xx:
 	* version 0.6
 	* THIS VERSION ONLY WORKS WITH FIREFOX 3.0
+	* new gb and gB mappings to repeat the last :buffer[!] command,
 	* :ls, :history and :bmarks output is now hyperlinked
 	* tags and keyword support for :bmark
 	* added full zoom, and changed keybindings slightly for text zoom
